# Advanced-Task-Management-REST-API

./: .env  .gitignore  README.md  main.py  pyproject.toml
api/v1/routes/: auth_routes.py  project_routes.py  task_routes.py
auth/: auth_service.py  hashing.py  token.py
configs/: settings.py
database/: aerich_config.py  connection.py
migrations/models/: 0_20251128225345_init.py
models/: project.py  task.py  user.py
schemas/: auth_schemas.py  project_schemas.py  task_schemas.py
services/: project_services.py  task_services.py
